---------------------------------------------------------------------------
Version 4.4.3  [v4-stable] (rgerhards), 2009-10-??
- bugfix: potential hang condition on queue shutdown
  [imported from v3-stable]
---------------------------------------------------------------------------
Version 4.4.2  [v4-stable] (rgerhards), 2009-10-09
- bugfix: invalid handling of zero-sized messages, could lead to mis-
  addressing and potential memory corruption/segfault
- bugfix: zero-sized UDP messages are no longer processed
  until now, they were forwarded to processing, but this makes no sense
  Also, it looks like the system seems to provide a zero return code
  on a UDP recvfrom() from time to time for some internal reasons. These
  "receives" are now silently ignored.
- bugfix: random data could be appended to message, possibly causing
  segfaults
- bugfix: reverse lookup reduction logic in imudp do DNS queries too often
  A comparison was done between the current and the former source address.
  However, this was done on the full sockaddr_storage structure and not
  on the host address only. This has now been changed for IPv4 and IPv6.
  The end result of this bug could be a higher UDP message loss rate than
  necessary (note that UDP message loss can not totally be avoided due
  to the UDP spec)
---------------------------------------------------------------------------
Version 4.4.1  [v4-stable] (rgerhards), 2009-09-02
- features requiring Java are automatically disabled if Java is not
  present (thanks to Michael Biebl for his help!)
- bugfix: invalid double-quoted PRI, among others in outgoing messages
  This causes grief with all receivers.
  Bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=147
- bugfix: Java testing tools were required, even if testbench was disabled
  This resulted in build errors if no Java was present on the build system,
  even though none of the selected option actually required Java.