@@ -1,5 +1,9 @@
 ---------------------------------------------------------------------------
 Version 4.4.3  [v4-stable] (rgerhards), 2009-10-??
+- bugfix: $ActionExecOnlyOnceEveryInterval did not work.
+  This was a regression from the time() optimizations done in v4.
+  Bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=143
+  Thanks to Klaus Tachtler for reporting this bug.
 - bugfix: potential hang condition on queue shutdown
   [imported from v3-stable]
 ---------------------------------------------------------------------------
